--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,11 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
+        ndk {
+            //设置支持的SO库架构
+            abiFilters "armeabi-v7a", "x86","arm64-v8a","x86_64"
+        }
     }
     buildTypes {
         release {
@@ -38,4 +43,13 @@ dependencies {
     //去掉statebar 使整体布局上移
     implementation 'com.gyf.barlibrary:barlibrary:2.2.9'
     implementation 'com.android.support:design:27.1.1'
+    implementation 'com.youth.banner:banner:1.4.10'
+
+    // 网易云信 添加依赖。注意，版本号必须一致。
+    // 基础功能 (必需)
+    compile 'com.netease.nimlib:basesdk:4.5.0'
+    // 音视频需要
+    compile 'com.netease.nimlib:nrtc:4.5.0'
+    // 音视频需要
+    compile 'com.netease.nimlib:avchat:4.5.0'
 }
