1.充值模块页面和功能完成; 2.收入模块页面和功能完成; 3.登录注册修改密码流程完成。

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -142,7 +142,9 @@
         <activity android:name=".login.Register2Activity" />
         <activity android:name=".login.ResetPwdActivity" />
         <activity android:name=".mine.MyAccountActivity" />
-        <activity android:name=".mine.VirtualCoinRecordActivity"></activity>
+        <activity android:name=".mine.VirtualCoinRecordActivity" />
+        <activity android:name=".main.OrderDetailActivity" />
+        <activity android:name=".mine.CashActivity"></activity>
     </application>
 
 </manifest>
