--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,27 +45,27 @@
     <application
         android:name=".VoiceApp"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_launch"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_launch"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
             android:name=".main.MainActivity"
-            android:screenOrientation="portrait">
-        </activity>
+            android:screenOrientation="portrait" />
 
         <!-- &lt;!&ndash; APP key, 可以在这里设置，也可以在 SDKOptions 中提供。 -->
         <!-- 如果 SDKOptions 中提供了，取 SDKOptions 中的值。 &ndash;&gt; -->
-         <!--<meta-data-->
-             <!--android:name="f0c2e363ab9ac4693c0994fd2e3bceaa"-->
-             <!--android:value="f9042fda3b5c" />-->
-         <meta-data
-             android:name="f9042fda3b5c"
-             android:value="f0c2e363ab9ac4693c0994fd2e3bceaa" />
-        <!--<meta-data-->
-            <!--android:name="com.netease.nim.appKey"-->
-            <!--android:value="45c6af3c98409b18a84451215d0bdd6e" />-->
+        <!-- <meta-data -->
+        <!-- android:name="f0c2e363ab9ac4693c0994fd2e3bceaa" -->
+        <!-- android:value="f9042fda3b5c" /> -->
+        <meta-data
+            android:name="f9042fda3b5c"
+            android:value="f0c2e363ab9ac4693c0994fd2e3bceaa" />
+        <!-- <meta-data -->
+        <!-- android:name="com.netease.nim.appKey" -->
+        <!-- android:value="45c6af3c98409b18a84451215d0bdd6e" /> -->
+
 
         <!-- 云信后台服务，请使用独立进程。 -->
         <service
@@ -120,11 +120,6 @@
         <activity
             android:name=".login.LoginActivity"
             android:screenOrientation="portrait">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".login.RegisterActivity"
@@ -191,7 +186,7 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".authentication.FaceRecognitionActivity"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".authentication.IdentifyBaiDuFaceActivity"
             android:screenOrientation="portrait" />
@@ -204,7 +199,21 @@
 
         <activity
             android:name=".voice.ReceiveRoomActivity"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".mine.SettingActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".login.ChangePwdActivity"
+            android:screenOrientation="portrait" />
+        <activity android:name=".login.LoadingActivity"
+            android:screenOrientation="portrait">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
