--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -330,18 +330,22 @@
             android:name=".dynamic.PublishActivity"
             android:configChanges="orientation|keyboardHidden"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustResize"
-            />
-        <!--android:configChanges="keyboardHidden|orientation|screenSize"-->
-        <!--android:screenOrientation="portrait"-->
-        <!--android:windowSoftInputMode="stateHidden|adjustResize"-->
+            android:windowSoftInputMode="adjustResize" />
+        <!-- android:configChanges="keyboardHidden|orientation|screenSize" -->
+        <!-- android:screenOrientation="portrait" -->
+        <!-- android:windowSoftInputMode="stateHidden|adjustResize" -->
         <activity
             android:name=".dynamic.MyDynamicActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".dynamic.PictureActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".dynamic.PhotoViewActivity"
-            android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".dynamic.PictureActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".dynamic.PhotoViewActivity"
+            android:screenOrientation="portrait" />
+        <activity android:name=".dynamic.ReportActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden|adjustResize"></activity>
     </application>
 
 </manifest>
