添加广播通知首页刷新,黑名单放到设置页

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -349,6 +349,8 @@
             android:windowSoftInputMode="stateHidden|adjustResize" />
         <activity android:name=".mine.BlackActivity"
             android:screenOrientation="portrait"></activity>
+
+        <receiver android:name=".utils.RefreshReceiver"/>
     </application>
 
 </manifest>
